--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <!--publications-->
         <div style="margin-left: 20px; margin-right: 20px"><b>Machine Learning for Audio Modalities - </b> 
           My previous research mainly focused on “normalizing” speech from diverse acoustic conditions for downstream tasks such as Speech-to-Text and Speaker Identification. My related publications cover two main directions:
-  (1) Leveraging multiple label modalities for auxiliary learning and data reuse, by combining synthetic and real-world audio, for example using pairs of noisy and clean speech and pairs of noisy speech and text labels to improve robustness.
+  (1) Leveraging multiple label modalities for auxiliary learning and data reuse, by combining synthetic and real-world audio, for example using pairs of noisy and clean speech (synthetic) and pairs of noisy speech and text labels (real-world) to improve robustness.
   (2) Fast adaptation and continual learning for acoustic normalization in order to mitigate out-of-domain degradation. Given the complexity of speech and acoustic environments, it is unrealistic to assume that audio models will generalize sufficiently on their own, so my work focuses on how to automatically acquire informative data and rapidly recalibrate these models.
         </div> 
           <br>
