--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     <br>
                     <i><u><b>Chi-Chang Lee*</b></u>, Zhang-Wei Hong*, Pulkit Agrawal</i>
                     <br>
-                    Conference on Neural Information Processing Systems (NeurIPS) 2024
+                    Conference on Neural Information Processing Systems (NeurIPS), 2024
                     <br>
                     <a href="https://openreview.net/pdf?id=vBGMbFgvsX" target="_blank">Paper</a> |
                     <a href="https://openreview.net/forum?id=vBGMbFgvsX&noteId=w9vPHsxyz6" target="_blank">OpenReview</a> |
