--- a/index.html
+++ b/index.html
@@ -358,13 +358,14 @@
                 </tr>
               </tbody>
             </table>
-            <br>
+            </div>
+          <br><br>
             <table>
   <tbody>
     <tr>
       <td class="all">
         <heading>
-          <i class="fas fa-rocket"></i>&nbsp;&nbsp;14-day side project: LLM In-Context Bayesian Optimization
+          <i class="fas fa-rocket"></i>&nbsp;&nbsp;14-day side project in 2025: LLM In-Context Bayesian Optimization
           <i class="fas fa-plus-square" style="float: right;" onclick="pressBtn(3)" id="side-btn"></i>
         </heading>
       </td>
@@ -390,8 +391,6 @@
   </div>
 </div>
 <br><br>
-          </div>
-          <br><br>
 
           <!--teaching-->
           <table>
