--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       var id_btn = ["exp-btn", "pub-btn", "apub-btn"],
           class_btn = ["fas fa-plus-square", "fas fa-minus-square", "fas fa-minus-square"];
       var id_div = ["exp-div", "pub-div", "apub-div"],
-          style_div = ["height: 300px; overflow: auto;", "height: 400px; overflow: auto;", "height: 400px; overflow: auto;"];
+          style_div = ["height: 300px; overflow: auto;", "height: 400px; overflow: auto;", "height: 400px; overflow: auto;", "height: 400px; overflow: auto;"];
 
       var btn = document.getElementById(id_btn[p]);
       if (btn.className == class_btn[0]) {
@@ -376,6 +376,9 @@
 
 <div style="height: 220px; overflow: auto;" id="side-div">
   <div style="margin-left: 20px; margin-right: 20px">
+    <img src="imgs/bo_sculpt.png"
+         style="width: 100%; max-width: 520px; display: block; margin: 0 auto 10px auto; border-radius: 10px;" />
+
     This project aims to expand in-context learning for Bayesian optimization by introducing a
     <b>reference policy</b> and a <b>policy-improvement</b> view. I target two goals:
     (1) acquiring improvement / convergence support via constrained updates relative to the reference policy, and
