--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
     <tr>
       <td class="all">
         <heading>
-          <i class="fas fa-rocket"></i>&nbsp;&nbsp;14-day side project in 2025: LLM In-Context Bayesian Optimization incorporating improvement constraints
+          <i class="fas fa-rocket"></i>&nbsp;&nbsp; LLM Side Project: In-Context Bayesian Optimization incorporating improvement constraints
           <i class="fas fa-plus-square" style="float: right;" onclick="pressBtn(3)" id="side-btn"></i>
         </heading>
       </td>
@@ -377,20 +377,22 @@
 <div style="height: 220px; overflow: auto;" id="side-div">
   <div style="margin-left: 20px; margin-right: 20px">
     <img src="imgs/bo_sculpt.png"
-         style="width: 100%; max-width: 520px; display: block; margin: 0 auto 10px auto; border-radius: 10px;" />
+         style="width: 100%; max-width: 260px; display: block; margin: 0 auto 10px auto; border-radius: 10px;" />
 
-    This project aims to expand in-context learning for Bayesian optimization by introducing a
+    This is a 14-day side project in 2025 that aims to expand in-context learning for Bayesian optimization by introducing a
     <b>reference policy</b> and a <b>policy-improvement</b> view. I target two goals:
     (1) acquiring improvement / convergence support via constrained updates relative to the reference policy, and
     (2) replacing domain-specific task descriptions (e.g., dataset/model info in hyperparameter tuning) with
     <b>task-agnostic statistical signals</b> produced by the reference policy (e.g., mean/uncertainty summaries),
     improving scalability to unseen BO tasks.
-    
+    <br><br>
+
     <a href="files/BO-SCULPT-3.pdf" target="_blank">Paper</a> |
     <a href="https://github.com/ChangLee0903/BO-SCULPT" target="_blank">Code</a>
    
   </div>
 </div>
+<br><br>
 
           <!--teaching-->
           <table>
