--- a/index.html
+++ b/index.html
@@ -373,14 +373,14 @@
 </table>
 <br>
 
-<div style="display: none;" id="side-div">
+<div id="side-div">
   <div style="margin-left: 20px; margin-right: 20px">
 
     <table>
       <tbody>
         <tr>
           <td class="pub-avatar" style="vertical-align: top;">
-            <img src="imgs/bo_sculpt.png" style="width: 100%; max-width: 320px; border-radius: 10px;" />
+            <img src="imgs/bo_sculpt.png" style="width: 100%; max-width: 480px; border-radius: 10px;" />
           </td>
 
           <td class="pub-description" style="vertical-align: top;">
