--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
     <tr>
       <td class="all">
         <heading>
-          <i class="fas fa-rocket"></i>&nbsp;&nbsp;14-day side project in 2025: LLM In-Context Bayesian Optimization incorporating improvement constraints
+          <i class="fas fa-rocket"></i>&nbsp;&nbsp;LLM side project in 2025: In-Context Bayesian Optimization incorporating improvement constraints
           <i class="fas fa-plus-square" style="float: right;" onclick="pressBtn(3)" id="side-btn"></i>
         </heading>
       </td>
