--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
       <td class="all">
         <heading>
           <i class="fas fa-rocket"></i>&nbsp;&nbsp;LLM side project in 2025: In-Context Bayesian Optimization incorporating improvement constraints
-          <i class="fas fa-plus-square" style="float: right;" onclick="pressBtn(3)" id="side-btn"></i>
+          <!-- <i class="fas fa-plus-square" style="float: right;" onclick="pressBtn(3)" id="side-btn"></i> -->
         </heading>
       </td>
     </tr>
