--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
             <div class="section-inner">
 
               <div class="pub-item">
-                <div class="pub-thumb">
+                <div class="pub-avatar">
                   <img src="imgs/bo_sculpt.png" alt="BO-SCULPT" />
                 </div>
                 <div class="pub-text">
@@ -460,8 +460,8 @@
               </div>
 
               <div class="pub-item">
-                <div class="pub-thumb">
-                  <img src="imgs/teapot_extension_ablation_1x3.png" alt="Text-to-Appearance Inverse Rendering" />
+                <div class="pub-avatar">
+                  <img src="imgs/teapot.png" alt="Text-to-Appearance Inverse Rendering" />
                 </div>
                 <div class="pub-text">
                   <papertitle>Text-to-Appearance Inverse Rendering with Vision–Language Feedback</papertitle>
