--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 
           <!-- 文字：垂直置中 -->
           <td class="pub-description" style="vertical-align: middle;">
-            <papertitle>In-Context Bayesian Optimization incorporating improvement constraints</papertitle> <br>
+            <papertitle>In-Context Bayesian Optimization incorporating improvement constraints</papertitle> <br><br>
             This is a 14-day side project in 2025 that aims to expand in-context learning for Bayesian optimization by introducing a
             <b>reference policy</b> and a <b>policy-improvement</b> view. I target two goals:
             (1) <b>acquiring improvement / convergence support</b> via constrained updates relative to the reference policy, and
@@ -415,19 +415,19 @@
         <tr>
           <!-- 圖片：水平置中 + 垂直置中 -->
           <td class="pub-avatar" style="vertical-align: middle; text-align: center;">
-            <img src="imgs/teapot_extension_ablation_1x3.png" style="width: 100%; max-width: 480px; border-radius: 10px;" />
+            <img src="imgs/teapot.png" style="width: 100%; max-width: 480px; border-radius: 10px;" />
           </td>
 
           <!-- 文字：垂直置中 -->
           <td class="pub-description" style="vertical-align: middle;">
-            <papertitle>Text-to-Appearance Inverse Rendering with Vision–Language Feedback</papertitle><br>
-            We study <b>unpaired text-to-appearance inverse rendering</b>, where a <b>differentiable renderer</b> is optimized using
-            <b>only text prompts</b>, without any <b>reference images</b>. Since direct <b>CLIP-based optimization</b> from text is often
-            <b>vague and under-constrained</b>, we introduce <b>vision–language feedback</b> as an <b>optimization confiner</b>.
-            The <b>VLM</b> augments <b>ambiguous textual descriptions</b> into <b>concrete, parameter-aware instructions</b> and determines
-            <b>which scene parameters should be updated</b>, while simultaneously <b>tightening feasible ranges for all parameters</b>.
-            This guidance <b>stabilizes optimization</b> and improves <b>prompt adherence</b> and <b>visual clarity</b> compared to
-            <b>naive CLIP-only methods</b>.
+            <papertitle>Text-to-Appearance Inverse Rendering with Vision–Language Feedback</papertitle><br><br>
+            We study <b>unpaired text-to-appearance inverse rendering</b>, where a differentiable renderer is optimized using
+            <b>only text prompts, without any reference images</b>. Since direct CLIP-based optimization from text is often
+            <b>vague and under-constrained</b>, we introduce vision–language feedback as an <b>optimization confiner</b>.
+            The VLM <b>augments ambiguous textual descriptions into concrete, parameter-aware instructions</b> and <b>determines
+            which scene parameters should be updated, while simultaneously tightening feasible ranges for all parameters</b>.
+            This guidance stabilizes optimization and improves prompt adherence and visual clarity compared to
+            naive CLIP-only methods.
             <br>
             <a href="files/Confined_Vibe_Optimization__Closed_Loop_Text_to_Appearance_Inverse_Rendering_with_Vision_Language_Feedback.pdf" target="_blank">Paper</a> |
             <a href="https://github.com/ChangLee0903/Vibe-Rendering.git" target="_blank">Code</a>
