--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
             We study <b>unpaired text-to-appearance inverse rendering</b>, where a differentiable renderer is optimized using
             <b>only text prompts, without any reference images</b>. Since direct CLIP-based optimization from text is often
             <b>vague and under-constrained</b>, we introduce vision–language feedback as an <b>optimization confiner</b>.
-            The VLM <b>augments ambiguous textual descriptions into concrete, parameter-aware instructions</b> and <b>determines
+            The VLM <b>(1) augments ambiguous textual descriptions into concrete, parameter-aware instructions</b> and <b>(2) determines
             which scene parameters should be updated, while simultaneously tightening feasible ranges for all parameters</b>.
             This guidance stabilizes optimization and improves prompt adherence and visual clarity compared to
             naive CLIP-only methods.
