--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
         <tr>
           <!-- 圖片：水平置中 + 垂直置中 -->
           <td class="pub-avatar" style="vertical-align: middle; text-align: center;">
-            <img src="imgs/teapot.png" style="width: 100%; max-width: 480px; border-radius: 10px;" />
+            <img src="imgs/VBR.gif" style="width: 100%; max-width: 480px; border-radius: 10px;" />
           </td>
 
           <!-- 文字：垂直置中 -->
