--- a/index.html
+++ b/index.html
@@ -53,16 +53,14 @@
                   </p>
 
                   <p>
-                    I earned both my Bachelor’s and Master’s degrees in
-                    <b><a href="https://homepage.ntu.edu.tw/~ntuesoe/en/Default.html">Engineering Science</a> and
+                    I am a CS Ph.D. student in at University of Maryland, College Park. Previously, I earned both my Bachelor’s and Master’s degrees in
+                    <a class="nice-link" href="https://homepage.ntu.edu.tw/~ntuesoe/en/Default.html">Engineering Science</a> and
                       <a href="https://www.csie.ntu.edu.tw//?locale=en">Computer Science</a> from National Taiwan
-                      University</b>, where I worked closely with
+                      University, where I worked closely with
                     <b>Prof. <a href="https://scholar.google.com/citations?hl=en&user=ZO5e5I4AAAAJ">Yu Tsao</a> and Prof.
                         <a href="https://homepage.iis.sinica.edu.tw/pages/whm/index_en.html">Hsin-Min Wang</a></b>.
                     Before 2023, my research primarily centered on
-                    <b>machine learning for audio and speech modalities</b>, especially
-                    <b>Speech-to-Text systems</b> and task-aware front-end processing for downstream audio applications.
-                    I focused on improving <b>robustness to diverse acoustic environments
+                    <b>machine learning for audio and speech modalities</b>. I focused on improving <b>robustness to diverse acoustic environments
                       (<a href="https://openreview.net/forum?id=5fvXH49wk2">ICLR'23</a> &
                       <a href="https://arxiv.org/pdf/2311.16604">ASRU'23</a>)</b> and on
                     <b>how such robustness can be continually learned and adapted over time
