--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                   <p>
                     I am a CS Ph.D. student in at University of Maryland, College Park. Previously, I earned both my Bachelor’s and Master’s degrees in
-                    <a class="nice-link" href="https://homepage.ntu.edu.tw/~ntuesoe/en/Default.html">Engineering Science</a> and
+                    <u href="https://homepage.ntu.edu.tw/~ntuesoe/en/Default.html">Engineering Science</u> and
                       <a href="https://www.csie.ntu.edu.tw//?locale=en">Computer Science</a> from National Taiwan
                       University, where I worked closely with
                     <b>Prof. <a href="https://scholar.google.com/citations?hl=en&user=ZO5e5I4AAAAJ">Yu Tsao</a> and Prof.
