--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <b>Prof. <a href="https://scholar.google.com/citations?hl=en&user=ZO5e5I4AAAAJ">Yu Tsao</a> and Prof.
                         <a href="https://homepage.iis.sinica.edu.tw/pages/whm/index_en.html">Hsin-Min Wang</a></b>.
                     Before 2023, my research primarily centered on
-                    <b>machine learning for audio and speech modalities</b>. I focused on improving <b>robustness to diverse acoustic environments
+                    <u>machine learning for audio and speech modalities</u>. I focused on improving <b>robustness to diverse acoustic environments
                       (<a href="https://openreview.net/forum?id=5fvXH49wk2">ICLR'23</a> &
                       <a href="https://arxiv.org/pdf/2311.16604">ASRU'23</a>)</b> and on
                     <b>how such robustness can be continually learned and adapted over time
@@ -73,11 +73,7 @@
                     focus to <b>Embodied AI, particularly Reinforcement Learning (RL)</b>. My current work investigates how,
                     under a <b>finite interaction budget</b>, a robotic agent can learn to
                     <b>distinguish heuristic signals from the true task objective</b> while still
-                    <b>optimizing for the real but sparse success outcomes</b>. This collaboration has led to two papers:
-                    one on the <b>real-world deployment of locomotion policies
-                      (<a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf">ICRA'24</a>)</b>,
-                    and another on <b>an advanced RL algorithm that achieves consistent gains on 31 robotic tasks
-                      (<a href="https://openreview.net/pdf?id=vBGMbFgvsX">NeurIPS'24</a>)</b>.
+                    <b>optimizing for the real but sparse success outcomes</b>.
                   </p>
                 </td>
 
@@ -192,7 +188,11 @@
               In practice, RL for robotics often struggles with complex environments because it relies on brittle,
               hand-engineered dense rewards or assumes unrealistic sampling budgets (e.g., relying on proximal heuristics
               while the true target is a sparse success outcome). I developed a novel RL framework that optimizes for
-              target success outcomes without requiring (1) infinite sampling assumptions or (2) restrictive reward shaping.
+              target success outcomes without requiring (1) infinite sampling assumptions or (2) restrictive reward shaping. I published two papers:
+                    one on the <b>real-world deployment of locomotion policies
+                      (<a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf">ICRA'24</a>)</b>,
+                    and another on <b>an advanced RL algorithm that achieves consistent gains on 31 robotic tasks
+                      (<a href="https://openreview.net/pdf?id=vBGMbFgvsX">NeurIPS'24</a>)</b>.
             </div>
             <br>
 
