--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
                   </p>
 
                   <p>
-                    I am a CS Ph.D. student in at University of Maryland, College Park. Previously, I earned both my Bachelor’s and Master’s degrees in
-                    <u href="https://homepage.ntu.edu.tw/~ntuesoe/en/Default.html">Engineering Science</u> and
+                    I am a CS Ph.D. student in at <a href="https://www.cs.umd.edu/">University of Maryland, College Park</a>. Previously, I earned both my Bachelor’s and Master’s degrees in
+                    <a href="https://homepage.ntu.edu.tw/~ntuesoe/en/Default.html">Engineering Science</a> and
                       <a href="https://www.csie.ntu.edu.tw//?locale=en">Computer Science</a> from National Taiwan
                       University, where I worked closely with
-                    <b>Prof. <a href="https://scholar.google.com/citations?hl=en&user=ZO5e5I4AAAAJ">Yu Tsao</a> and Prof.
-                        <a href="https://homepage.iis.sinica.edu.tw/pages/whm/index_en.html">Hsin-Min Wang</a></b>.
+                    Prof. <a href="https://scholar.google.com/citations?hl=en&user=ZO5e5I4AAAAJ">Yu Tsao</a> and Prof.
+                        <a href="https://homepage.iis.sinica.edu.tw/pages/whm/index_en.html">Hsin-Min Wang</a>.
                     Before 2023, my research primarily centered on
-                    <u>machine learning for audio and speech modalities</u>. I focused on improving <b>robustness to diverse acoustic environments
+                    <u>machine learning for audio and speech modalities</u>. I focused on improving <u>robustness to diverse acoustic environments
                       (<a href="https://openreview.net/forum?id=5fvXH49wk2">ICLR'23</a> &
-                      <a href="https://arxiv.org/pdf/2311.16604">ASRU'23</a>)</b> and on
-                    <b>how such robustness can be continually learned and adapted over time
+                      <a href="https://arxiv.org/pdf/2311.16604">ASRU'23</a>)</u> and on
+                    <u>how such robustness can be continually learned and adapted over time
                       (<a href="https://arxiv.org/pdf/2005.11760" target="_blank">Interspeech'20</a> and
-                      <a href="https://arxiv.org/pdf/2206.09058" target="_blank">Interspeech'22</a>)</b>.
+                      <a href="https://arxiv.org/pdf/2206.09058" target="_blank">Interspeech'22</a>)</u>.
                     <br><br>
                     In 2023, I have been honored to begin collaborating with the
                     <b><a href="https://cap.csail.mit.edu/improbable-ai-lab-lab-tour" target="_blank">Improbable AI Lab</a> at MIT CSAIL</b>,
